# correlator

./: CMakeLists.txt  bg_correlator200000.cpp  bg_run.sh  corr5_200000.sh  corr_run.sh  correlator.h  correlator200000.cpp  cuts.h  run_jobs.sh
src/: backcorrelator_newsuncalib.cpp  correlator_newsuncalib.cpp
